tdf#114181 OOXML import: combined chart X axis crosses Y at wrong place

This patch fixes the crossing of X axis on Y axis in combined charts created in MSO with different scale of primary and secondary axes.
For example if one of the dataseries has only positive values and the other one has negative ones.

Change-Id: Ie514bc1610270e5fd834bcbdb114f8628213c3a3